# AI_Gen_Semester_Comments_Tool

./: .gitignore  README.md  main.py  pyproject.toml  sample.xlsx
website_version/: package-lock.json  package.json
website_version/pages/: _document.js  index.jsx
website_version/styles/: Home.module.css
