[tool.poetry]
name = "ai-gen-semester-comments-tool"
version = "0.1.0"
description = "This is a tool to auto generate semester comments with some keywords about students."
authors = ["MoonJam <wu.messi.wu@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
